# yugabyte-rust-examples

./: .gitignore  README.md
cassandra-cpp/: Cargo.toml  README.md
cassandra-cpp-datastax/: README.md
cassandra-cpp-datastax-cloud/: Cargo.toml  README.md
cassandra-cpp-datastax-cloud/src/: main.rs
cassandra-cpp-datastax/examples/: cloud.rs
cassandra-cpp-datastax/src/: main.rs
cassandra-cpp/examples/: batch_insert.rs  cloud.rs  local.rs  simple.rs
cdrs/: Cargo.toml  README.md
cdrs-cloud/: Cargo.toml  README.md
cdrs-cloud/src/: main.rs
cdrs/examples/: batch_insert.rs  cloud.rs  local.rs  simple.rs
cdrs/src/: main.rs
cdrs_tokio/: Cargo.toml  README.md
cdrs_tokio/examples/: batch_insert.rs  cloud.rs  local.rs
diesel/: Cargo.toml
diesel/examples/: cloud.rs  connectionpool.rs  connectionpool_cloud.rs  local.rs
postgres/: Cargo.toml
postgres/examples/: cloud.rs  connectionpool.rs  connectionpool_cloud.rs  local.rs  postgres-r2d2-cloud.rs  postgres-r2d2-retry.rs  postgres-r2d2-ssl.rs  postgres-ssl.rs  query_execution.rs  tokio-postgres-bb8-ssl.rs  tokio-postgres-bb8.rs  tokio-postgres-deadpool-ssl.rs  tokio-postgres-deadpool.rs  tokio-postgres-pipelining.rs  tokio-postgres-ssl.rs  tokio-postgres.rs
scylla/: Cargo.toml  README.md
scylla-cloud/: Cargo.toml  README.md
scylla-cloud/src/: main.rs
scylla/examples/: batch_insert.rs  batch_ret.rs  cloud.rs  local.rs  local_multi_statement_transaction.rs  simple.rs
scylla/src/: main.rs
sea_orm/: Cargo.toml
sea_orm/examples/: local.rs
sqlx/: Cargo.toml
sqlx/examples/: cloud.rs  local.rs  (+3 more)
