[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "*"
openssl = "*"
postgres-openssl = "*"
r2d2 = "*"
r2d2_postgres = "*"
chrono = "*"
rand = "*"
log = "*"
env_logger = "*"
tokio-postgres = "*"
tokio = { version = "*", features = [ "full" ] }
bb8 = "*"
bb8-postgres = "*"
deadpool-postgres = "*"
futures = "*"
